--- a/languages.json5
+++ b/languages.json5
@@ -39,7 +39,7 @@
     "node-conn-label": "Antall Tilkoblinger",
     "node-speed-label": "Hastighet",
     "node-path-label": "Sti Retthet",
-    "page-2-message": "Jeg håper du har det bra",
+    "page-2-message": "Jeg håper du har det bra.",
     "page-3-message": "Denne nettsiden bygges.",
     "page-4-message": "Men jeg håper du liker det."
   },
